--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "graphql-codegen-core": "^0.14.5",
     "jest": "^23.6.0",
+    "mongodb-memory-server": "^5.1.5",
     "nodemon": "^1.18.3",
     "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
